dev/swagger-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: swagger-ui
  namespace: yas-dev
  labels:
    app: swagger-ui
spec:
  type: ClusterIP
  selector:
    app: swagger-ui
  ports:
  - port: 8080
    targetPort: 8080
