dev/swagger-ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: swagger-ui
  namespace: yas-dev
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: api.yas.local.com
    http:
      paths:
      - path: /swagger-ui
        pathType: ImplementationSpecific
        backend:
          service:
            name: swagger-ui
            port:
              number: 8080
